--- a/data/nlu/nlu.yml
+++ b/data/nlu/nlu.yml
@@ -5,8 +5,8 @@ nlu:
     - are you a bot?
     - am i speaking to an ai?
     - are you a human or a bot?
-    - are you real? 
-    - are you virtual? 
+    - are you real?
+    - are you virtual?
     - are you an ai?
     - aren't you a bot
     - are you a chatbot
@@ -185,6 +185,7 @@ nlu:
     - i guess it means - no
     - i'm afraid not
     - i'm not sure
+    - i don't want to transfer money
 - intent: goodbye
   examples: |
     - see you later
@@ -213,7 +214,6 @@ nlu:
     - good bye
     - good bye rasa bot!
     - good night
-    - goodbye
     - goodbye.
     - goodnight
     - gotta go
@@ -242,6 +242,7 @@ nlu:
     - welcome
     - howdy
     - good day
+    - hi this is adam
 - intent: inform
   examples: |
     - $10
@@ -554,12 +555,11 @@ nlu:
     - come back
     - cool! can I do something else here?
     - hello what can you do for me
-    - help
-    - help me
     - help please
     - help pls
     - help?
     - hep me
+    - oh no
 - intent: human_handoff
   examples: |
     - handoff
@@ -578,7 +578,6 @@ nlu:
     - talk to human
     - i want human :(
     - can i talk to human
-    - i want to talk to a human
     - i want to speak to human
     - can i talk to a real person?
     - connect me to a real person
@@ -612,13 +611,14 @@ nlu:
     - Can you make sandwiches?
     - Can you please send me an uber
     - ofif fsdfafsfs
+    - hi. i'd like to apply for a mortgage loan.
 - synonym: credit
   examples: |
     - credit card
+    - card
     - credit cards
     - credit account
     - credit accounts
-    - card
     - cards
     - credit card account
 - synonym: emblem
