--- a/data/stories/stories.yml
+++ b/data/stories/stories.yml
@@ -1,27 +1,30 @@
 version: "2.0"
-
 stories:
-
 - story: say ok when user affirms after utter_help
   steps:
   - action: utter_help
   - intent: affirm
   - action: utter_ok
-
 - story: say ok when user affirms after action_show_balance
   steps:
   - action: action_show_balance
   - intent: affirm
   - action: utter_ok
-
 - story: say ok when user affirms after action_show_recipients
   steps:
   - action: action_show_recipients
   - intent: affirm
   - action: utter_ok
-  
 - story: say ok when user affirms after action_show_transfer_charge
   steps:
   - action: action_show_transfer_charge
   - intent: affirm
+  - action: utter_ok
+- story: Story from Conversation ID 81a8eccf89b0434f8ee76a184870147f
+  steps:
+  - slot_was_set:
+    - currency: $
+  - intent: greet
+  - slot_was_set:
+    - currency: $
   - action: utter_ok
